<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TouchImageViewActivity!</string>
    <string name="app_name">TouchImageView</string>

    <!-- Activities -->
    <string name="single_touchimageview">Single TouchImageView</string>
    <string name="mirror_touchimageview">Mirroring Example</string>
    <string name="viewpager_example">ViewPager Example</string>
    <string name="viewpager2_example">ViewPager2 Example</string>
    <string name="switch_image_example">Switch Image Example</string>
    <string name="switch_scaletype_example">Switch ScaleType Example</string>
    <string name="resize_button_example">Resize Example</string>
    <string name="recyclerview_and_zoom">RecyclerView and zoom</string>
    <string name="animate_zoom">Animate zoom</string>
    <string name="glide">Glide</string>
    <string name="rounded_corners_example">Rounded corners</string>

    <string name="get_scroll_position">getScrollPosition():</string>
    <string name="get_zoomed_rect">getZoomedRect():</string>
    <string name="get_current_zoom">getCurrentZoom():</string>
    <string name="mirroring_text">All touch gestures applied to one TouchImageView will be mirrored on the other.</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="switch_image_text">Click TouchImageView to cycle through image resources. Note that the zoom state is maintained.</string>
    <string name="switch_scaletype_text">Click TouchImageView to cycle through supported ScaleTypes.</string>
    <string name="loaded">loaded</string>
</resources>
