<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/imageSingle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/nature_1" />

    <LinearLayout
        android:id="@+id/top_text_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="3dp"
            android:text="@string/get_scroll_position"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/scroll_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="scroll_position" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_text_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_text_line"
        android:background="@android:color/white"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="3dp"
            android:text="@string/get_zoomed_rect"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/zoomed_rect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/touchCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_text_line"
        android:background="@android:color/white"
        android:padding="5dp" />

    <Button
        android:id="@+id/current_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/get_current_zoom" />

</RelativeLayout>
